ex07/ seg faults

--- a/ex07/Makefile
+++ b/ex07/Makefile
@@ -6,12 +6,12 @@
 #    By: averheij <averheij@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2021/01/11 15:02:04 by averheij      #+#    #+#                  #
-#    Updated: 2021/01/11 15:43:55 by averheij      ########   odam.nl          #
+#    Updated: 2021/01/15 13:33:32 by averheij      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
-NAME		=	megaphone
-CPPFILES	=	megaphone.cpp
+NAME		=	replace
+CPPFILES	=	replace.cpp FileHandler.cpp
 OBJDIR		=	objects
 OFILES		=	$(CPPFILES:%.cpp=$(OBJDIR)/%.o)
 OS      	=   $(shell uname)
@@ -21,6 +21,7 @@ else
 	CC		=	clang++
 endif
 FLAGS		=	-Wall -Werror -Wextra
+FLAGS		+=	-g
 
 all: $(NAME)
 
@@ -45,6 +46,5 @@ re: fclean all
 test: all
 	@echo "\n\t\t!TEST"
 	@echo "\tCorrect: All arguments as one string, All alpha uppercase\n"
-	./$(NAME) "shhhhh... I think the students are asleep..."
-	./$(NAME) Damnit " ! " "Sorry students, I thought this thing was off."
-	./$(NAME)
+	cd tests;
+	./unit_tester.sh
